; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/user32/extr_msg.c_test_SetWindowRgn.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/user32/extr_msg.c_test_SetWindowRgn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"TestWindowClass\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"Test overlapped\00", align 1
@WS_OVERLAPPEDWINDOW = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [36 x i8] c"Failed to create overlapped window\0A\00", align 1
@SW_SHOW = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [22 x i8] c"testing SetWindowRgn\0A\00", align 1
@TRUE = common dso_local global i32 0, align 4
@WmSetWindowRgn = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [15 x i8] c"WmSetWindowRgn\00", align 1
@FALSE = common dso_local global i32 0, align 4
@WmSetWindowRgn_no_redraw = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [25 x i8] c"WmSetWindowRgn_no_redraw\00", align 1
@.str.6 = private unnamed_addr constant [16 x i8] c"WmSetWindowRgn2\00", align 1
@WmSetWindowRgn_clear = common dso_local global i32 0, align 4
@.str.7 = private unnamed_addr constant [21 x i8] c"WmSetWindowRgn_clear\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_SetWindowRgn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_SetWindowRgn() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  %3 = load i32, i32* @WS_OVERLAPPEDWINDOW, align 4
  %4 = call i64 @CreateWindowExA(i32 0, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i32 %3, i32 100, i32 100, i32 200, i32 200, i32 0, i32 0, i32 0, i32* null)
  store i64 %4, i64* %2, align 8
  %5 = load i64, i64* %2, align 8
  %6 = icmp ne i64 %5, 0
  %7 = zext i1 %6 to i32
  %8 = call i32 @ok(i32 %7, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.2, i64 0, i64 0))
  %9 = load i64, i64* %2, align 8
  %10 = load i32, i32* @SW_SHOW, align 4
  %11 = call i32 @ShowWindow(i64 %9, i32 %10)
  %12 = load i64, i64* %2, align 8
  %13 = call i32 @UpdateWindow(i64 %12)
  %14 = call i32 (...) @flush_events()
  %15 = call i32 (...) @flush_sequence()
  %16 = call i32 @trace(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.3, i64 0, i64 0))
  %17 = call i32 @CreateRectRgn(i32 0, i32 0, i32 150, i32 150)
  store i32 %17, i32* %1, align 4
  %18 = load i64, i64* %2, align 8
  %19 = load i32, i32* %1, align 4
  %20 = load i32, i32* @TRUE, align 4
  %21 = call i32 @SetWindowRgn(i64 %18, i32 %19, i32 %20)
  %22 = load i32, i32* @WmSetWindowRgn, align 4
  %23 = load i32, i32* @FALSE, align 4
  %24 = call i32 @ok_sequence(i32 %22, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.4, i64 0, i64 0), i32 %23)
  %25 = call i32 @CreateRectRgn(i32 30, i32 30, i32 160, i32 160)
  store i32 %25, i32* %1, align 4
  %26 = load i64, i64* %2, align 8
  %27 = load i32, i32* %1, align 4
  %28 = load i32, i32* @FALSE, align 4
  %29 = call i32 @SetWindowRgn(i64 %26, i32 %27, i32 %28)
  %30 = load i32, i32* @WmSetWindowRgn_no_redraw, align 4
  %31 = load i32, i32* @FALSE, align 4
  %32 = call i32 @ok_sequence(i32 %30, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.5, i64 0, i64 0), i32 %31)
  %33 = call i32 @CreateRectRgn(i32 0, i32 0, i32 180, i32 180)
  store i32 %33, i32* %1, align 4
  %34 = load i64, i64* %2, align 8
  %35 = load i32, i32* %1, align 4
  %36 = load i32, i32* @TRUE, align 4
  %37 = call i32 @SetWindowRgn(i64 %34, i32 %35, i32 %36)
  %38 = load i32, i32* @WmSetWindowRgn, align 4
  %39 = load i32, i32* @FALSE, align 4
  %40 = call i32 @ok_sequence(i32 %38, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.6, i64 0, i64 0), i32 %39)
  %41 = load i64, i64* %2, align 8
  %42 = load i32, i32* @TRUE, align 4
  %43 = call i32 @SetWindowRgn(i64 %41, i32 0, i32 %42)
  %44 = load i32, i32* @WmSetWindowRgn_clear, align 4
  %45 = load i32, i32* @FALSE, align 4
  %46 = call i32 @ok_sequence(i32 %44, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.7, i64 0, i64 0), i32 %45)
  %47 = load i64, i64* %2, align 8
  %48 = call i32 @DestroyWindow(i64 %47)
  ret void
}

declare dso_local i64 @CreateWindowExA(i32, i8*, i8*, i32, i32, i32, i32, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @ok(i32, i8*) #1

declare dso_local i32 @ShowWindow(i64, i32) #1

declare dso_local i32 @UpdateWindow(i64) #1

declare dso_local i32 @flush_events(...) #1

declare dso_local i32 @flush_sequence(...) #1

declare dso_local i32 @trace(i8*) #1

declare dso_local i32 @CreateRectRgn(i32, i32, i32, i32) #1

declare dso_local i32 @SetWindowRgn(i64, i32, i32) #1

declare dso_local i32 @ok_sequence(i32, i8*, i32) #1

declare dso_local i32 @DestroyWindow(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
